# m183-project-haas_rehmann

./: .gitignore  README.md  flake.nix
.github/workflows/: backend-docker.yml  frontend-docker.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: app.rs  auth.rs  config.rs  db.rs  error.rs  game.rs  identity.rs  kanidm.rs  main.rs  models.rs  state.rs  validate.rs
backend/src/auth/: provider.rs
backend/src/handlers/: admin_handler.rs  mod.rs  register_handler.rs  slot_handler.rs  user_handler.rs
backend/src/routes/: mod.rs  user.rs
devops/: .env.example  .gitignore  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.infra.yml  docker-compose.yml  podman-up.sh
devops/kanidm/: demo-passwords.sh  gen-cert.sh  provision.sh  recover.sh  server.toml
devops/kanidm/secrets/: .gitkeep
frontend/: .env.example  Dockerfile  env.d.ts  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: admin.ts  auth.ts  client.ts  endpoints.ts  index.ts  mock.ts  register.ts  slot.ts  user.ts
frontend/src/assets/: main.css
frontend/src/components/: AppHeader.vue  LoanButton.vue  SlotMachine.vue  UserStats.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: api.ts
frontend/src/views/: HomeView.vue  NotFoundView.vue  PlayView.vue  RegisterView.vue
frontend/src/views/admin/: AdminView.vue
