[package]
name = "m183-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum
axum = "0.8.9"
axum-extra = { version = "0.10", features = ["cookie", "cookie-private"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "5.0"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5.3"
