[package]
name = "m183-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum
axum = "0.8.9"
axum-oidc-client = "0.7.0"
axum-extra = { version = "0.12", features = ["cookie", "cookie-private"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "5.0"
reqwest = { version = "0.13", features = ["json"] }
tower = "0.5.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment Variables
dotenvy = "0.15"

# Serve Vue static
tower-http = { version = "0.7", features = ["fs"] }

# Database
sqlx = { version = "0.9.0", features = [
	"runtime-tokio",
	"tls-rustls",
	"postgres",
	"macros",
	"chrono",
	"uuid",
] }
anyhow = "1.0.102"
